--- a/Frontend/WebApp/Components/Pages/Products.razor
+++ b/Frontend/WebApp/Components/Pages/Products.razor
@@ -1,23 +1,22 @@
 ﻿@page "/products"
 @using Microsoft.AspNetCore.OutputCaching
-@inject CatalogAPIClient CatalogAPIClient
+@inject CatalogAPIClient CatalogApiClient
 @attribute [StreamRendering(true)]
 @attribute [OutputCache(Duration = 5)]
 
 <PageTitle>Products</PageTitle>
 
-<h3>Products</h3>
+<h1>Products</h1>
 
-<p>Here are some of our amazing outdoor products that you can purchase</p>
-<p>This component demonstrates fetching data from a service.</p>
+<p>Here are some of our amazing outdoor products that you can purchase.</p>
 
-@if(products == null)
+@if (products == null)
 {
     <p><em>Loading...</em></p>
 }
-else if (!products.Any())
+else if (products.Count == 0)
 {
-    <p><em>No products found.</em></p>
+    <p><em>There is a problem loading our products. Please try again later.</em></p>
 }
 else
 {
@@ -34,12 +33,11 @@ else
             @foreach (var product in products)
             {
                 <tr>
-                    <td>
-                        <img src="https://raw.github" alt="@product.Name" width="100" />
-                    </td>
+                    <!-- Simulating images being hosted on a CDN -->
+                    <td><img height="80" width="80" src="https://raw.githubusercontent.com/MicrosoftDocs/mslearn-dotnet-cloudnative/main/dotnet-docker/Products/wwwroot/images/@product.ImageUrl" /></td>
                     <td>@product.Name</td>
                     <td>@product.Description</td>
-                    <td>@product.Price.ToString("C")</td>
+                    <td>@product.Price.ToString("C2")</td>
                 </tr>
             }
         </tbody>
@@ -47,10 +45,11 @@ else
 }
 
 @code {
-    private IEnumerable<Product>? products;
+    private List<Product>? products;
 
     protected override async Task OnInitializedAsync()
     {
-        products = await CatalogAPIClient.GetProductsAsync();
+        // Simulate asynchronous loading to demonstrate streaming rendering
+        products = await CatalogApiClient.GetProductsAsync();
     }
 }
